# Portfolio

./: README.md
anime/: README.md  web scrapping.py
crunchyroll/WebScraping/: README.md  pyproject.toml
crunchyroll/WebScraping/webscraping/: web_scraping.py
crunchyroll/analise_dos_dados/: pyproject.toml
crunchyroll/analise_dos_dados/analise_dos_dados/: teste.py
