[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = ""
authors = ["José Neto <netofonseca32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
joblib = "^1.3.2"
pandas = "^2.2.1"
sqlalchemy = "^2.0.27"
selenium = "^4.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
