[tool.poetry]
name = "analise-dos-dados"
version = "0.1.0"
description = ""
authors = ["José Neto <netofonseca32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
